android/src/main/jniLibs/x86_64/libpolygonid.h

typedef enum
{
	PLGNSTATUSCODE_ERROR,
	PLGNSTATUSCODE_NIL_POINTER,
	// error extracting credential status from verifiable credential
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
	// error resolving credential status (e.g. getting the status from chain of DHS)
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_RESOLVE_ERROR,
	// error getting merkletree proof from credential status
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
	// merkletree proof is invalid
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_STATE_ERROR,
	// credential is revoked
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_REVOKED_ERROR,
	// the same as above but for issuer credential (for signature proofs)
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_RESOLVE_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_STATE_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_REVOKED_ERROR,
} PLGNStatusCode;
typedef struct _PLGNStatus
{
	PLGNStatusCode status;
	char *error_msg;
} PLGNStatus;
typedef unsigned char GoUint8;
extern GoUint8 PLGNDescribeID(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNBabyJubJubSignPoseidon(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNBabyJubJubVerifyPoseidon(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNBabyJubJubPrivate2Public(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNBabyJubJubPublicUncompress(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNBabyJubJubPublicCompress(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNValidateAttestationDocument(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNAAnonPack(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNAAnonUnpack(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNDecryptJWE(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNDecryptEncryptedCredential(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNVerifyProof(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNVerifyAuthResponse(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNVerifyAnonAadhaarQR(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);