lib/common/libs/polygonidcore/native_polygonidcore.dart


  late final _PLGNDescribeIDPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNDescribeID');
  late final _PLGNDescribeID =
      _PLGNDescribeIDPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNBabyJubJubSignPoseidon(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubSignPoseidon(jsonResponse, in$, cfg, status);
  }

  late final _PLGNBabyJubJubSignPoseidonPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNBabyJubJubSignPoseidon');
  late final _PLGNBabyJubJubSignPoseidon =
      _PLGNBabyJubJubSignPoseidonPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNBabyJubJubVerifyPoseidon(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubVerifyPoseidon(jsonResponse, in$, cfg, status);
  }

  late final _PLGNBabyJubJubVerifyPoseidonPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNBabyJubJubVerifyPoseidon');
  late final _PLGNBabyJubJubVerifyPoseidon =
      _PLGNBabyJubJubVerifyPoseidonPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNBabyJubJubPrivate2Public(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPrivate2Public(jsonResponse, in$, cfg, status);
  }

  late final _PLGNBabyJubJubPrivate2PublicPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNBabyJubJubPrivate2Public');
  late final _PLGNBabyJubJubPrivate2Public =
      _PLGNBabyJubJubPrivate2PublicPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNBabyJubJubPublicUncompress(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPublicUncompress(jsonResponse, in$, cfg, status);
  }

  late final _PLGNBabyJubJubPublicUncompressPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNBabyJubJubPublicUncompress');
  late final _PLGNBabyJubJubPublicUncompress =
      _PLGNBabyJubJubPublicUncompressPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNBabyJubJubPublicCompress(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPublicCompress(jsonResponse, in$, cfg, status);
  }

  late final _PLGNBabyJubJubPublicCompressPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNBabyJubJubPublicCompress');
  late final _PLGNBabyJubJubPublicCompress =
      _PLGNBabyJubJubPublicCompressPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNValidateAttestationDocument(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNValidateAttestationDocument(jsonResponse, in$, cfg, status);
  }

  late final _PLGNValidateAttestationDocumentPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNValidateAttestationDocument');
  late final _PLGNValidateAttestationDocument =
      _PLGNValidateAttestationDocumentPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNAAnonPack(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAAnonPack(jsonResponse, in$, cfg, status);
  }

  late final _PLGNAAnonPackPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNAAnonPack');
  late final _PLGNAAnonPack =
      _PLGNAAnonPackPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNAAnonUnpack(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNAAnonUnpack(jsonResponse, in$, cfg, status);
  }

  late final _PLGNAAnonUnpackPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNAAnonUnpack');
  late final _PLGNAAnonUnpack =
      _PLGNAAnonUnpackPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNDecryptJWE(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNDecryptJWE(jsonResponse, in$, cfg, status);
  }

  late final _PLGNDecryptJWEPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNDecryptJWE');
  late final _PLGNDecryptJWE =
      _PLGNDecryptJWEPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNDecryptEncryptedCredential(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNDecryptEncryptedCredential(jsonResponse, in$, cfg, status);
  }

  late final _PLGNDecryptEncryptedCredentialPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNDecryptEncryptedCredential');
  late final _PLGNDecryptEncryptedCredential =
      _PLGNDecryptEncryptedCredentialPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNVerifyProof(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNVerifyProof(jsonResponse, in$, cfg, status);
  }

  late final _PLGNVerifyProofPtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNVerifyProof');
  late final _PLGNVerifyProof =
      _PLGNVerifyProofPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNVerifyAuthResponse(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNVerifyAuthResponse(jsonResponse, in$, cfg, status);
  }

  late final _PLGNVerifyAuthResponsePtr =
      _lookup<
        ffi.NativeFunction<
          GoUint8 Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<PLGNStatus>>,
          )
        >
      >('PLGNVerifyAuthResponse');
  late final _PLGNVerifyAuthResponse =
      _PLGNVerifyAuthResponsePtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<PLGNStatus>>,
        )
      >();

  int PLGNVerifyAnonAadhaarQR(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in$,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNVerifyAnonAadhaarQR(jsonResponse, in$, cfg, status);
  }
